--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "hris",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "seed": "node src/databases/seeders/seeder.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "HRIS application using Express.js and MongoDB",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
@@ -18,6 +21,7 @@
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "express-session": "^1.17.3"
   }
 }
