--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "description": "HRIS application using Express.js and MongoDB",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-mongo": "^4.6.0",
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.1",
-    "express-session": "^1.17.3"
+    "mongoose": "^8.5.1"
   }
 }
