"Added mongoose-sequence package, updated ModelHasRole model to use auto-incrementing ID, removed modelHasRoleController, and updated roleController to delete associated ModelHasRole entries on role deletion."

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "mongoose-sequence": "^6.0.1",
     "numeral": "^2.0.6"
   }
 }
